Make a working stub for the window

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,17 +5,20 @@ set (Install_data_dir "\"${CMAKE_INSTALL_PREFIX}/data/\"")
 # configure a header file to pass some of the CMake settings
 # to the source code
 configure_file (
-    "${PROJECT_SOURCE_DIR}/src/emegenceConfig.h.in"
-    "${PROJECT_SOURCE_DIR}/src/emegenceConfig.h"
+    "${PROJECT_SOURCE_DIR}/src/emergenceConfig.h.in"
+    "${PROJECT_SOURCE_DIR}/src/emergenceConfig.h"
     )
 
 # add the binary tree to the search path for include files
 # so that we will find FlockingConfig.h
 include_directories ("${PROJECT_BINARY_DIR}/src")
 
+add_subdirectory (ui)
+
 add_executable (emergence main.cpp)
 # Maybe linking SDL2 is not necessary since it should be ui
 target_link_libraries (emergence Qt5::Widgets)
+target_link_libraries (emergence ${PROJECT_NAME}_ui)
 
 install (TARGETS emergence DESTINATION bin)
 install (FILES "${PROJECT_SOURCE_DIR}/src/emergenceConfig.h"
