Fill in the Entity part of the skel - Factory missing

--- a/src/entity/CMakeLists.txt
+++ b/src/entity/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library (${PROJECT_NAME}_entity entity.cpp)
+add_library (${PROJECT_NAME}_entity entity.cpp inert_entity.cpp)
 
 add_subdirectory (factory)
 add_subdirectory (velocity_strategy)
@@ -11,3 +11,4 @@ target_link_libraries (${PROJECT_NAME}_entity ${PROJECT_NAME}_world)
 
 install (TARGETS ${PROJECT_NAME}_entity DESTINATION lib)
 install (FILES entity.h DESTINATION include/entity)
+install (FILES inert_entity.h DESTINATION include/entity)
