--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
     - source /opt/qt510/bin/qt510-env.sh
     - mkdir build
     - cd build
-    - cmake ..
+    - cmake .. -DCMAKE_BUILD_TYPE=Coverage
     - make
     - ctest -V
 
