--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,8 @@ after_success:
         - cd ${TRAVIS_BUILD_DIR}
         - lcov --directory . --capture --output-file coverage.info # capture coverage info
         - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system
+        - lcov --remove coverage.info '/opt/*' --output-file coverage.info # filter out Qt
+        - lcov --remove coverage.info 'test_*' --output-file coverage.info # filter out test implementations
         - lcov --list coverage.info #debug info
         # Uploading report to CodeCov
         - bash <(curl -s https://codecov.io/bash) -a "-g test_" || echo "Codecov did not collect coverage reports"
