Add Ant library to project

--- a/src/entity/CMakeLists.txt
+++ b/src/entity/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_library (${PROJECT_NAME}_entity entity.cpp inert_entity.cpp /
-    living_entity.cpp)
+add_library (${PROJECT_NAME}_entity entity.cpp inert_entity.cpp living_entity.cpp)
 
 add_subdirectory (factory)
 
@@ -9,7 +8,7 @@ add_subdirectory (ant)
 add_subdirectory (food)
 
 target_link_libraries (${PROJECT_NAME}_entity Qt5::Widgets)
-target_link_libraries (${PROJECT_NAME}_entity ${PROJECT_NAME}_food)
+target_link_libraries (${PROJECT_NAME}_entity ${PROJECT_NAME}_food ${PROJECT_NAME}_ant)
 
 install (TARGETS ${PROJECT_NAME}_entity DESTINATION lib)
 install (FILES entity.h DESTINATION include/entity)
