--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,13 @@ target_link_libraries(test_food Qt5::Widgets Qt5::Test)
 
 add_test(Food test_food)
 
+# Test case for Ant
+add_executable(test_ant test_ant.cpp)
+target_link_libraries(test_ant ${PROJECT_NAME}_ant)
+target_link_libraries(test_ant Qt5::Widgets Qt5::Test)
+
+add_test(Ant test_ant)
+
 # Test case for World
 add_executable(test_world test_world.cpp)
 target_link_libraries(test_world ${PROJECT_NAME}_world)
