Fix an issue where Ant would go to infinity with only Cohesion
The issue was quite long to solve because the main issue was the way
data was transferred from one Decorator to the next.

The actual answer was to never trust Decorators to handle data and just
always use the context pointer to modify the variable.

NOTE : current context is an Ant* but for extensibility's sake, it would
probably be better to have Role* as a context, and then make Role a
superclass of RoleAnt and then pass RoleAnt as context instead of the
actual Ant. RoleAnt is then responsible for forwarding a new
RoleAnt::context() call to the good Ant* so the current behaviour of
MovementStrategy still works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,13 @@ set (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
 
 set (BUILD_SHARED_LIBS OFF)
 
-set (CMAKE_CXX_FLAGS "-O2 -pipe \
--Wall -Wextra -D_FORTIFY_SOURCE=2 -fexceptions")
-set (CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG")
-set (CMAKE_CXX_FLAGS_MINSIZEREL "-DNDEBUG")
-set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-DNDEBUG")
-set (CMAKE_CXX_FLAGS_DEBUG "-g -fsanitize=address -fno-omit-frame-pointer")
-set (CMAKE_CXX_FLAGS_COVERAGE "-g -fprofile-arcs -ftest-coverage")
+set (CMAKE_CXX_FLAGS "-pipe \
+-Wall -Wextra -fexceptions")
+set (CMAKE_CXX_FLAGS_RELEASE "-O3 -D_FORTIFY_SOURCE=3 -DNDEBUG")
+set (CMAKE_CXX_FLAGS_MINSIZEREL "-Os -D_FORTIFY_SOURCE=2 -DNDEBUG")
+set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -D_FORTIFY_SOURCE=2 -g -DNDEBUG")
+set (CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fsanitize=address -fno-omit-frame-pointer")
+set (CMAKE_CXX_FLAGS_COVERAGE "-O0 -g -fprofile-arcs -ftest-coverage")
 set (CMAKE_CXX_LINKER_FLAGS_DEBUG "-lasan")
 set (CMAKE_CXX_LINKER_FLAGS_COVERAGE "-fprofile-arcs -ftest-coverage")
 
